# path_optimizer_2

./: CMakeLists.txt  README.md  package.xml
config/: rvizConfig.rviz
include/path/: data_structure.h  free_space.h  gflags.h  path_costs.h  path_problem_manager.h  reference_line.h
include/reference_path_smoother/: reference_path_smoother.hpp
launch/: demo.launch.py  demo_ilqr.launch.py
src/: path_optimizer.cpp
src/config/: planning_flags.cpp
src/path/: data_structure.cpp  free_space.cpp  gflags.cpp  path_problem_manager.cpp  reference_line.cpp  spline.cpp  tool.cpp
src/reference_path_smoother/: tension_smoother.cpp  tension_smoother_2.cpp
src/solver/: problem_manager.cpp  solver.cpp
src/test/: demo.cpp  demo_ilqr.cpp  reference_line_processor.cpp
